<resources>
    <string name="app_name">Bedu shop</string>
    <string name="hello">Hola, este es el modulo 2</string>
    <string name="clicked">Se le ha dado click al boton</string>
    <string name="email">Correo electrónico</string>
    <string name="pwd">Contraseña</string>
    <string name="botonLogin">Iniciar Sesión</string>
    <string name="botonRegister">Regístrate aquí</string>
    <string name="errorUser">Campo obligatorio</string>
    <string name="errorPass">Campo obligatorio</string>
    <string name="successToast">Inicio de sesión exitoso</string>
    <string name="registerSuccessToast">Registro exitoso</string>
    <string name="registerErrorToast">Se debe completar todos los campos</string>
    <string name="separator"> O </string>
    <string name="registerTitle">Regístrate</string>
    <string name="registerButton">Registrarse</string>
    <string name="nameRegister">Nombre completo</string>
    <string name="phoneRegister">Teléfono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>