<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/backgroundLogin">


    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/registerTitle"
        android:textColor="@color/btnColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/separator"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.902" />
    -->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:colorScheme="dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />


    <!-- -0- -->
    <View
        android:id="@+id/view2"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/separator"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.456" />

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/textView" />



    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:autofillHints="no"
        android:drawableStart="@drawable/user"
        android:drawablePadding="12dp"
        android:hint="@string/nameRegister"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        android:hint="@string/phoneRegister"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableStart="@drawable/pwd"
        android:drawablePadding="12dp"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/pwd"
        android:drawablePadding="12dp"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput"
        android:autofillHints="no"/>


    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/btnColor"
        android:hint="@string/registerButton"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>